--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "commit": "cz"
   },
   "dependencies": {
+    "@types/react-native-vector-icons": "^6.4.18",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
