--- a/package.json
+++ b/package.json
@@ -11,6 +11,14 @@
     "commitlint": "commitlint --edit",
     "commit": "cz"
   },
+  "lint-staged": {
+    "*.+(ts|tsx)": [
+      "eslint --fix"
+    ],
+    "*.{js,jsx,ts,tsx,json}": [
+      "prettier --write"
+    ]
+  },
   "dependencies": {
     "@types/react-native-vector-icons": "^6.4.18",
     "react": "18.2.0",
@@ -36,6 +44,7 @@
     "eslint": "^8.19.0",
     "husky": "^9.0.11",
     "jest": "^29.6.3",
+    "lint-staged": "^15.2.2",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
