--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "lint": "eslint .",
+    "styles-check": "prettier --check '*.{js,jsx,ts,tsx}'",
+    "lint": "eslint --fix '*.{js,jsx,ts,tsx}'",
     "start": "react-native start",
     "prepare": "husky",
     "commitlint": "commitlint --edit",
