ci(main.yml): fix error on linter commant

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,7 @@ jobs:
           config: ./commitlint.config.mjs
 
       - name: Linter
-        uses:
+        run: yarn run lint
+
       - name: Styles
         run: yarn run styles-check
