--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,14 +17,23 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
       - name: Set Node Version
         uses: actions/setup-node@v2
         with:
           node-version: '18.x'
+
       - name: Install Dependencies
         run: yarn install
+
+      - name: Validate all commits from PR
+        run: yarn commitlint-from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
+
       - name: Linter
         run: yarn run lint
+
       - name: Styles
         run: yarn run styles-check
