--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-gesture-handler": "^2.16.0",
+    "react-native-reanimated": "^3.8.1",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
